--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
     "./branches/Cargo.toml",
     "./loops/Cargo.toml",
     "./slice/Cargo.toml",
-    "./structs/Cargo.toml"
+    "./structs/Cargo.toml",
+    "./enums/Cargo.toml"
   ]
 }
